Supprise, there was more

--- a/les2/src/main/webapp/index.html
+++ b/les2/src/main/webapp/index.html
@@ -8,5 +8,6 @@
 				<input type="submit" value="Go!" />
 			</div>
 		</form>
+		<a href="calculator.html">Go to calculator (l2.p5)</a>
 	</body>
 </html>
