--- a/src/main/webapp/les5/index.html
+++ b/src/main/webapp/les5/index.html
@@ -1,6 +1,7 @@
 <html>
 	<head>
 		<title>Weather site</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 		<link rel="stylesheet" type="text/css" href="./style.css">
 	</head>
 	<body>
