--- a/src/main/webapp/error.html
+++ b/src/main/webapp/error.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Whooops</title>
+		<title>Whoops!</title>
 	</head>
 	<body>
-		505 Internal Server Error!
+		500 Internal Server Error!
 	</body>
 </html>
