--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -17,9 +17,8 @@
 					<li><a href="./les3/prac3">Les 3 - Practicum 3</a></li>
 				</ul>
 			</li>
-			<li><a href="./les5">Les 5</a></li>
-			<li><a href="./les6">Les 6</a></li>
-			<li><a href="./les5">Les 7</a></li>
+			<li><a href="./les5">Les 5, 6, 7</a></li>
+			<li><a href="./les6">Les 6 - Practicum 1</a></li>
 			<li><a href="./les5">Les 8</a></li>
 			<li><a href="./les5">Les 9</a></li>
 		</ul>
